--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "「他单纯只想把日子过得不浪费」"
+description: "「万物皆虚，万事皆允」"
 header-img: "img/bg-me-2022.jpg"
 header-mask: 0.3
 multilingual: true
@@ -24,11 +24,11 @@ multilingual: true
 
 {% if site.disqus_username %}
 <!-- disqus 评论框 start -->
-<div class="comment">
+<!-- <div class="comment">
     <div id="disqus_thread" class="disqus-thread">
 
     </div>
-</div>
+</div> -->
 <!-- disqus 评论框 end -->
 
 <!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
