--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「万物皆虚，万事皆允」"
+description: "「Nothing is true, everything is permitted.」"
 ---
 
 {% for post in paginator.posts %}
