--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: 404
 hide-in-nav: true
-description: "你来到了没有知识的荒原 :("
+description: "Надежда — верная сестра судьбы."
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
