--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "「Nothing is true, everything is permitted.」"
+description: "「Hope for the best, prepare for the worst.」"
 header-img: "img/bg-me-2022.jpg"
 header-mask: 0.3
 multilingual: true
