--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: "「Nothing is true, everything is permitted.」"
+description: "「Hope for the best, prepare for the worst.」"
 header-img: "img/bg-little-universe.jpg"
 ---
 
